<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <TextView
        android:id="@+id/textViewMyTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:text="My Tasks"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/textViewTasks"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAddTaskActivity"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="30dp"
        android:text="ADD TASK"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonTeamTasks"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list" />

    <Button
        android:id="@+id/buttonAllTasks"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:text="ALL TASKS"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonTeamTasks" />

    <Button
        android:id="@+id/buttonTeamTasks"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="30dp"
        android:text="TEAM TASKS"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonAllTasks"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/buttonAddTaskActivity"
        app:layout_constraintTop_toBottomOf="@+id/list" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="332dp"
        android:layout_height="450dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="24dp"
        android:background="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/buttonAllTasks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTasks" />

    <ImageView
        android:id="@+id/imageViewSettings"
        android:layout_width="61dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_cogwheels" />

    <TextView
        android:id="@+id/textViewTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="5dp"
        android:text="Set Your Username in Settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMyTasks" />

    <ImageView
        android:id="@+id/imageViewLogOut"
        android:layout_width="61dp"
        android:layout_height="53dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logout" />
    y
</androidx.constraintlayout.widget.ConstraintLayout>