<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Settings">
    <ImageView
        android:id="@+id/imageViewLogOut"
        android:layout_width="61dp"
        android:layout_height="53dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logout" />

    <ImageView
        android:id="@+id/fromSettingsActivityToHome"
        android:layout_width="61dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_homepage" />

    <TextView
        android:id="@+id/textViewSettings"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:text="Settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/textViewUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47000003" />

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="86dp"
        android:layout_height="24dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="Username "
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSettings" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="241dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Please Enter Your Username"
        app:layout_constraintBottom_toTopOf="@+id/spinnerTeam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUsername" />

    <ImageView
        android:id="@+id/imageViewSave"
        android:layout_width="60dp"
        android:layout_height="65dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTeam"
        app:srcCompat="@drawable/icon_save" />

    <TextView
        android:id="@+id/textViewTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="328dp"
        android:text="Team"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/spinnerTeam"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerTeam"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/imageViewSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewTeam"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
        app:layout_constraintVertical_bias="0.397" />

</androidx.constraintlayout.widget.ConstraintLayout>