<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddTask">

    <ImageView
        android:id="@+id/imageViewLogOut"
        android:layout_width="61dp"
        android:layout_height="53dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logout" />

    <ImageView
        android:id="@+id/fromAddTaskActivityToHome"
        android:layout_width="61dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_homepage" />

    <TextView
        android:id="@+id/textViewAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:text="Add Task"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/textViewTaskTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/textViewTaskDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="Task Description"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/editTextTaskBody"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTaskTitle"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonAddTask"
        android:layout_width="162dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="30dp"
        android:text="ADD TASK"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/textViewTotalTasksLabel"
        app:layout_constraintEnd_toStartOf="@+id/buttonUploadTask"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/buttonUploadTask"
        android:layout_width="173dp"
        android:layout_height="60dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        android:text="UPLOAD TASK"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/textViewTotalTasksLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonAddTask" />

    <EditText
        android:id="@+id/editTextTaskTitle"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="My Task"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/textViewTaskDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTaskTitle" />

    <TextView
        android:id="@+id/textViewTaskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:text="Task title"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/editTextTaskTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddTask" />

    <EditText
        android:id="@+id/editTextTaskBody"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Do somthing"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTaskDescription" />

    <TextView
        android:id="@+id/textViewTotalTasks"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        android:text="0"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewTotalTasksLabel"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddTask" />

    <TextView
        android:id="@+id/textViewTotalTasksLabel"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="30dp"
        android:text="Total tasks: "
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="@+id/textViewState"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewState"
        app:layout_constraintTop_toTopOf="@+id/textViewState"
        app:layout_constraintVertical_bias="0.833" />

    <TextView
        android:id="@+id/textViewState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="56dp"
        android:text="State"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toStartOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTaskBody" />

    <TextView
        android:id="@+id/textViewTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="61dp"
        android:layout_marginBottom="35dp"
        android:text="Team"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"

        app:layout_constraintBottom_toTopOf="@+id/buttonAddTask"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewState" />

    <Spinner
        android:id="@+id/spinnerTeam"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="@+id/textViewTeam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewTeam"
        app:layout_constraintTop_toTopOf="@+id/textViewTeam"
        app:layout_constraintVertical_bias="0.58" />
</androidx.constraintlayout.widget.ConstraintLayout>