...
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_homepage" />

    <TextView
        android:id="@+id/textViewDetailsTaskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="47dp"
        android:text="Task Title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
...
